# pokegold

./: CMakeLists.txt  README.md  assets_manifest_pokegold.h  launcher_main.cpp  pokegold.c  pokegold.h  pokegold_dispatch_chunk_0.c  pokegold_dispatch_chunk_1.c  pokegold_dispatch_chunk_2.c  pokegold_dispatch_chunk_3.c  pokegold_funcs_0.c  pokegold_funcs_1.c  pokegold_funcs_10.c  pokegold_funcs_11.c  pokegold_funcs_12.c  pokegold_funcs_13.c  pokegold_funcs_14.c  pokegold_funcs_15.c  pokegold_funcs_16.c  pokegold_funcs_17.c  pokegold_funcs_18.c  pokegold_funcs_19.c  pokegold_funcs_2.c  pokegold_funcs_20.c  pokegold_funcs_21.c  pokegold_funcs_22.c  pokegold_funcs_23.c  pokegold_funcs_24.c  pokegold_funcs_25.c  pokegold_funcs_26.c  pokegold_funcs_27.c  pokegold_funcs_28.c  pokegold_funcs_29.c  pokegold_funcs_3.c  pokegold_funcs_30.c  pokegold_funcs_31.c  pokegold_funcs_32.c  pokegold_funcs_33.c  pokegold_funcs_34.c  pokegold_funcs_35.c  (+25 more)
tools/: regen.sh
